# test_airflow

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  architecture.md  clickhouse_schema.sql  docker-compose copy.yaml  docker-compose.yaml  env.example  pyproject.toml  requirements.txt
app/: __init__.py  config.py  create_service_db.py  main.py  service_db_setup.sql  test2.py
app/db/: __init__.py  clickhouse.py  merge_config.py  mysql.py
app/models/: __init__.py  service_db.py
app/services/: __init__.py  data_service.py  sync_service.py
config/: airflow.cfg
dags/: __init__.py  data_sync_dag.py  mysql_to_clickhouse_etl.py  test1_dag.py  updates.py
tests/: __init__.py  test_merge_data.py
